--- a/runtime/musl-lkl/apps/python/Python-3.9.1/Makefile.pre.in
+++ b/runtime/musl-lkl/apps/python/Python-3.9.1/Makefile.pre.in
@@ -298,8 +298,7 @@ IO_OBJS=	\
 
 ##########################################################################
 
-LIBFFI_INCLUDEDIR=	../dest/usr/include
-#@LIBFFI_INCLUDEDIR@
+LIBFFI_INCLUDEDIR=	@LIBFFI_INCLUDEDIR@
 
 ##########################################################################
 # Parser
