--- a/runtime/musl-lkl/apps/cap_file/musl-lkl-cap_file.yaml
+++ b/runtime/musl-lkl/apps/cap_file/musl-lkl-cap_file.yaml
@@ -7,12 +7,12 @@ capfiles:
 ---
 cVMs:
 - name: cap_file_test
-  disk: disk_cap_file.img
+  disk: disk_hello.img
   runtime: libmusl-lkl.so
   args: /ld.so /app/cap_file
   callback_out: monitor
   isolation:
-  - base:  0x400000000
-    size:  0x040000000
-    begin: 0x400000000
-    end:   0x440000000
+  - base: 0x20000000
+    size: 0x10000000
+    begin: 0x20000000
+    end: 0x30000000
